Advanced Identity and Access Management _IAM_ in DevSecOps/approved-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: approved-pod
  namespace: policy-test
spec:
  serviceAccountName: app-service-account
  containers:
  - name: nginx
    image: nginx:1.20
    ports:
    - containerPort: 80
