Advanced Identity and Access Management _IAM_ in DevSecOps/no-sa-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-sa-pod
  namespace: policy-test
spec:
  containers:
  - name: nginx
    image: nginx:1.20
    ports:
    - containerPort: 80
