Advanced Identity and Access Management _IAM_ in DevSecOps/unapproved-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: unapproved-pod
  namespace: policy-test
spec:
  serviceAccountName: unauthorized-sa
  containers:
  - name: nginx
    image: nginx:1.20
    ports:
    - containerPort: 80
