Advanced Identity and Access Management _IAM_ in DevSecOps/serviceaccount-constraint-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredserviceaccount
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredServiceAccount
      validation:
        type: object
        properties:
          allowedServiceAccounts:
            type: array
            items:
              type: string
          exemptNamespaces:
            type: array
            items:
              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredserviceaccount

        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          not exempt_namespace
          service_account := input.review.object.spec.serviceAccountName
          not allowed_service_account(service_account)
          msg := sprintf("Pod uses disallowed ServiceAccount '%v'. Allowed ServiceAccounts: %v", [service_account, input.parameters.allowedServiceAccounts])
        }

        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          not exempt_namespace
          not input.review.object.spec.serviceAccountName
          msg := "Pod must specify a ServiceAccount"
        }

        exempt_namespace {
          input.review.object.metadata.namespace == input.parameters.exemptNamespaces[_]
        }

        allowed_service_account(sa) {
          sa == input.parameters.allowedServiceAccounts[_]
        }
