Advanced Identity and Access Management _IAM_ in DevSecOps/serviceaccount-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredServiceAccount
metadata:
  name: must-use-approved-sa
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces: ["kube-system", "gatekeeper-system"]
  parameters:
    allowedServiceAccounts:
      - "default"
      - "app-service-account"
      - "monitoring-sa"
    exemptNamespaces:
      - "kube-system"
      - "gatekeeper-system"
